parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ALEATORIO
    EM
    FAZER
    FIMPARA
    LBRACKET
    PARA
    RBRACKET

Grammar

Rule 0     S' -> D
Rule 1     D -> A
Rule 2     D -> E
Rule 3     E -> E INCREMENT
Rule 4     E -> E MAIS_IGUAL E PONTO_VIRGULA
Rule 5     E -> ESCREVER STRING PONTO_VIRGULA
Rule 6     E -> ESCREVER E PONTO_VIRGULA
Rule 7     E -> ESCREVER E VIRGULA E PONTO_VIRGULA
Rule 8     E -> ESCREVER STRING VIRGULA E PONTO_VIRGULA
Rule 9     E -> ESCREVER E VIRGULA STRING PONTO_VIRGULA
Rule 10    E -> E MAIS E
Rule 11    E -> E MULT E
Rule 12    E -> E MENOS E
Rule 13    E -> MENOS E
Rule 14    E -> LPAR E RPAR
Rule 15    E -> NUMERO
Rule 16    E -> ID
Rule 17    E -> E DIVISAO E
Rule 18    E -> COMENTARIO_UMA_LINHA
Rule 19    E -> COMENTARIO_MULTIPLAS_LINHAS
Rule 20    A -> ID IGUAL E PONTO_VIRGULA
Rule 21    D -> VAR var_list PONTO_VIRGULA
Rule 22    var_list -> var_item
Rule 23    var_list -> var_item VIRGULA var_list
Rule 24    var_item -> ID IGUAL constant
Rule 25    constant -> NUMERO
Rule 26    constant -> STRING

Terminals, with rules where they appear

ALEATORIO            : 
COMENTARIO_MULTIPLAS_LINHAS : 19
COMENTARIO_UMA_LINHA : 18
DIVISAO              : 17
EM                   : 
ESCREVER             : 5 6 7 8 9
FAZER                : 
FIMPARA              : 
ID                   : 16 20 24
IGUAL                : 20 24
INCREMENT            : 3
LBRACKET             : 
LPAR                 : 14
MAIS                 : 10
MAIS_IGUAL           : 4
MENOS                : 12 13
MULT                 : 11
NUMERO               : 15 25
PARA                 : 
PONTO_VIRGULA        : 4 5 6 7 8 9 20 21
RBRACKET             : 
RPAR                 : 14
STRING               : 5 8 9 26
VAR                  : 21
VIRGULA              : 7 8 9 23
error                : 

Nonterminals, with rules where they appear

A                    : 1
D                    : 0
E                    : 2 3 4 4 6 7 7 8 9 10 10 11 11 12 12 13 14 17 17 20
constant             : 24
var_item             : 22 23
var_list             : 21 23

Parsing method: LALR

state 0

    (0) S' -> . D
    (1) D -> . A
    (2) D -> . E
    (21) D -> . VAR var_list PONTO_VIRGULA
    (20) A -> . ID IGUAL E PONTO_VIRGULA
    (3) E -> . E INCREMENT
    (4) E -> . E MAIS_IGUAL E PONTO_VIRGULA
    (5) E -> . ESCREVER STRING PONTO_VIRGULA
    (6) E -> . ESCREVER E PONTO_VIRGULA
    (7) E -> . ESCREVER E VIRGULA E PONTO_VIRGULA
    (8) E -> . ESCREVER STRING VIRGULA E PONTO_VIRGULA
    (9) E -> . ESCREVER E VIRGULA STRING PONTO_VIRGULA
    (10) E -> . E MAIS E
    (11) E -> . E MULT E
    (12) E -> . E MENOS E
    (13) E -> . MENOS E
    (14) E -> . LPAR E RPAR
    (15) E -> . NUMERO
    (16) E -> . ID
    (17) E -> . E DIVISAO E
    (18) E -> . COMENTARIO_UMA_LINHA
    (19) E -> . COMENTARIO_MULTIPLAS_LINHAS

    VAR             shift and go to state 4
    ID              shift and go to state 5
    ESCREVER        shift and go to state 6
    MENOS           shift and go to state 7
    LPAR            shift and go to state 8
    NUMERO          shift and go to state 9
    COMENTARIO_UMA_LINHA shift and go to state 10
    COMENTARIO_MULTIPLAS_LINHAS shift and go to state 11

    D                              shift and go to state 1
    A                              shift and go to state 2
    E                              shift and go to state 3

state 1

    (0) S' -> D .



state 2

    (1) D -> A .

    $end            reduce using rule 1 (D -> A .)


state 3

    (2) D -> E .
    (3) E -> E . INCREMENT
    (4) E -> E . MAIS_IGUAL E PONTO_VIRGULA
    (10) E -> E . MAIS E
    (11) E -> E . MULT E
    (12) E -> E . MENOS E
    (17) E -> E . DIVISAO E

    $end            reduce using rule 2 (D -> E .)
    INCREMENT       shift and go to state 12
    MAIS_IGUAL      shift and go to state 13
    MAIS            shift and go to state 14
    MULT            shift and go to state 15
    MENOS           shift and go to state 16
    DIVISAO         shift and go to state 17


state 4

    (21) D -> VAR . var_list PONTO_VIRGULA
    (22) var_list -> . var_item
    (23) var_list -> . var_item VIRGULA var_list
    (24) var_item -> . ID IGUAL constant

    ID              shift and go to state 20

    var_list                       shift and go to state 18
    var_item                       shift and go to state 19

state 5

    (20) A -> ID . IGUAL E PONTO_VIRGULA
    (16) E -> ID .

    IGUAL           shift and go to state 21
    INCREMENT       reduce using rule 16 (E -> ID .)
    MAIS_IGUAL      reduce using rule 16 (E -> ID .)
    MAIS            reduce using rule 16 (E -> ID .)
    MULT            reduce using rule 16 (E -> ID .)
    MENOS           reduce using rule 16 (E -> ID .)
    DIVISAO         reduce using rule 16 (E -> ID .)
    $end            reduce using rule 16 (E -> ID .)


state 6

    (5) E -> ESCREVER . STRING PONTO_VIRGULA
    (6) E -> ESCREVER . E PONTO_VIRGULA
    (7) E -> ESCREVER . E VIRGULA E PONTO_VIRGULA
    (8) E -> ESCREVER . STRING VIRGULA E PONTO_VIRGULA
    (9) E -> ESCREVER . E VIRGULA STRING PONTO_VIRGULA
    (3) E -> . E INCREMENT
    (4) E -> . E MAIS_IGUAL E PONTO_VIRGULA
    (5) E -> . ESCREVER STRING PONTO_VIRGULA
    (6) E -> . ESCREVER E PONTO_VIRGULA
    (7) E -> . ESCREVER E VIRGULA E PONTO_VIRGULA
    (8) E -> . ESCREVER STRING VIRGULA E PONTO_VIRGULA
    (9) E -> . ESCREVER E VIRGULA STRING PONTO_VIRGULA
    (10) E -> . E MAIS E
    (11) E -> . E MULT E
    (12) E -> . E MENOS E
    (13) E -> . MENOS E
    (14) E -> . LPAR E RPAR
    (15) E -> . NUMERO
    (16) E -> . ID
    (17) E -> . E DIVISAO E
    (18) E -> . COMENTARIO_UMA_LINHA
    (19) E -> . COMENTARIO_MULTIPLAS_LINHAS

    STRING          shift and go to state 22
    ESCREVER        shift and go to state 6
    MENOS           shift and go to state 7
    LPAR            shift and go to state 8
    NUMERO          shift and go to state 9
    ID              shift and go to state 24
    COMENTARIO_UMA_LINHA shift and go to state 10
    COMENTARIO_MULTIPLAS_LINHAS shift and go to state 11

    E                              shift and go to state 23

state 7

    (13) E -> MENOS . E
    (3) E -> . E INCREMENT
    (4) E -> . E MAIS_IGUAL E PONTO_VIRGULA
    (5) E -> . ESCREVER STRING PONTO_VIRGULA
    (6) E -> . ESCREVER E PONTO_VIRGULA
    (7) E -> . ESCREVER E VIRGULA E PONTO_VIRGULA
    (8) E -> . ESCREVER STRING VIRGULA E PONTO_VIRGULA
    (9) E -> . ESCREVER E VIRGULA STRING PONTO_VIRGULA
    (10) E -> . E MAIS E
    (11) E -> . E MULT E
    (12) E -> . E MENOS E
    (13) E -> . MENOS E
    (14) E -> . LPAR E RPAR
    (15) E -> . NUMERO
    (16) E -> . ID
    (17) E -> . E DIVISAO E
    (18) E -> . COMENTARIO_UMA_LINHA
    (19) E -> . COMENTARIO_MULTIPLAS_LINHAS

    ESCREVER        shift and go to state 6
    MENOS           shift and go to state 7
    LPAR            shift and go to state 8
    NUMERO          shift and go to state 9
    ID              shift and go to state 24
    COMENTARIO_UMA_LINHA shift and go to state 10
    COMENTARIO_MULTIPLAS_LINHAS shift and go to state 11

    E                              shift and go to state 25

state 8

    (14) E -> LPAR . E RPAR
    (3) E -> . E INCREMENT
    (4) E -> . E MAIS_IGUAL E PONTO_VIRGULA
    (5) E -> . ESCREVER STRING PONTO_VIRGULA
    (6) E -> . ESCREVER E PONTO_VIRGULA
    (7) E -> . ESCREVER E VIRGULA E PONTO_VIRGULA
    (8) E -> . ESCREVER STRING VIRGULA E PONTO_VIRGULA
    (9) E -> . ESCREVER E VIRGULA STRING PONTO_VIRGULA
    (10) E -> . E MAIS E
    (11) E -> . E MULT E
    (12) E -> . E MENOS E
    (13) E -> . MENOS E
    (14) E -> . LPAR E RPAR
    (15) E -> . NUMERO
    (16) E -> . ID
    (17) E -> . E DIVISAO E
    (18) E -> . COMENTARIO_UMA_LINHA
    (19) E -> . COMENTARIO_MULTIPLAS_LINHAS

    ESCREVER        shift and go to state 6
    MENOS           shift and go to state 7
    LPAR            shift and go to state 8
    NUMERO          shift and go to state 9
    ID              shift and go to state 24
    COMENTARIO_UMA_LINHA shift and go to state 10
    COMENTARIO_MULTIPLAS_LINHAS shift and go to state 11

    E                              shift and go to state 26

state 9

    (15) E -> NUMERO .

    INCREMENT       reduce using rule 15 (E -> NUMERO .)
    MAIS_IGUAL      reduce using rule 15 (E -> NUMERO .)
    MAIS            reduce using rule 15 (E -> NUMERO .)
    MULT            reduce using rule 15 (E -> NUMERO .)
    MENOS           reduce using rule 15 (E -> NUMERO .)
    DIVISAO         reduce using rule 15 (E -> NUMERO .)
    $end            reduce using rule 15 (E -> NUMERO .)
    PONTO_VIRGULA   reduce using rule 15 (E -> NUMERO .)
    VIRGULA         reduce using rule 15 (E -> NUMERO .)
    RPAR            reduce using rule 15 (E -> NUMERO .)


state 10

    (18) E -> COMENTARIO_UMA_LINHA .

    INCREMENT       reduce using rule 18 (E -> COMENTARIO_UMA_LINHA .)
    MAIS_IGUAL      reduce using rule 18 (E -> COMENTARIO_UMA_LINHA .)
    MAIS            reduce using rule 18 (E -> COMENTARIO_UMA_LINHA .)
    MULT            reduce using rule 18 (E -> COMENTARIO_UMA_LINHA .)
    MENOS           reduce using rule 18 (E -> COMENTARIO_UMA_LINHA .)
    DIVISAO         reduce using rule 18 (E -> COMENTARIO_UMA_LINHA .)
    $end            reduce using rule 18 (E -> COMENTARIO_UMA_LINHA .)
    PONTO_VIRGULA   reduce using rule 18 (E -> COMENTARIO_UMA_LINHA .)
    VIRGULA         reduce using rule 18 (E -> COMENTARIO_UMA_LINHA .)
    RPAR            reduce using rule 18 (E -> COMENTARIO_UMA_LINHA .)


state 11

    (19) E -> COMENTARIO_MULTIPLAS_LINHAS .

    INCREMENT       reduce using rule 19 (E -> COMENTARIO_MULTIPLAS_LINHAS .)
    MAIS_IGUAL      reduce using rule 19 (E -> COMENTARIO_MULTIPLAS_LINHAS .)
    MAIS            reduce using rule 19 (E -> COMENTARIO_MULTIPLAS_LINHAS .)
    MULT            reduce using rule 19 (E -> COMENTARIO_MULTIPLAS_LINHAS .)
    MENOS           reduce using rule 19 (E -> COMENTARIO_MULTIPLAS_LINHAS .)
    DIVISAO         reduce using rule 19 (E -> COMENTARIO_MULTIPLAS_LINHAS .)
    $end            reduce using rule 19 (E -> COMENTARIO_MULTIPLAS_LINHAS .)
    PONTO_VIRGULA   reduce using rule 19 (E -> COMENTARIO_MULTIPLAS_LINHAS .)
    VIRGULA         reduce using rule 19 (E -> COMENTARIO_MULTIPLAS_LINHAS .)
    RPAR            reduce using rule 19 (E -> COMENTARIO_MULTIPLAS_LINHAS .)


state 12

    (3) E -> E INCREMENT .

    INCREMENT       reduce using rule 3 (E -> E INCREMENT .)
    MAIS_IGUAL      reduce using rule 3 (E -> E INCREMENT .)
    MAIS            reduce using rule 3 (E -> E INCREMENT .)
    MULT            reduce using rule 3 (E -> E INCREMENT .)
    MENOS           reduce using rule 3 (E -> E INCREMENT .)
    DIVISAO         reduce using rule 3 (E -> E INCREMENT .)
    $end            reduce using rule 3 (E -> E INCREMENT .)
    PONTO_VIRGULA   reduce using rule 3 (E -> E INCREMENT .)
    VIRGULA         reduce using rule 3 (E -> E INCREMENT .)
    RPAR            reduce using rule 3 (E -> E INCREMENT .)


state 13

    (4) E -> E MAIS_IGUAL . E PONTO_VIRGULA
    (3) E -> . E INCREMENT
    (4) E -> . E MAIS_IGUAL E PONTO_VIRGULA
    (5) E -> . ESCREVER STRING PONTO_VIRGULA
    (6) E -> . ESCREVER E PONTO_VIRGULA
    (7) E -> . ESCREVER E VIRGULA E PONTO_VIRGULA
    (8) E -> . ESCREVER STRING VIRGULA E PONTO_VIRGULA
    (9) E -> . ESCREVER E VIRGULA STRING PONTO_VIRGULA
    (10) E -> . E MAIS E
    (11) E -> . E MULT E
    (12) E -> . E MENOS E
    (13) E -> . MENOS E
    (14) E -> . LPAR E RPAR
    (15) E -> . NUMERO
    (16) E -> . ID
    (17) E -> . E DIVISAO E
    (18) E -> . COMENTARIO_UMA_LINHA
    (19) E -> . COMENTARIO_MULTIPLAS_LINHAS

    ESCREVER        shift and go to state 6
    MENOS           shift and go to state 7
    LPAR            shift and go to state 8
    NUMERO          shift and go to state 9
    ID              shift and go to state 24
    COMENTARIO_UMA_LINHA shift and go to state 10
    COMENTARIO_MULTIPLAS_LINHAS shift and go to state 11

    E                              shift and go to state 27

state 14

    (10) E -> E MAIS . E
    (3) E -> . E INCREMENT
    (4) E -> . E MAIS_IGUAL E PONTO_VIRGULA
    (5) E -> . ESCREVER STRING PONTO_VIRGULA
    (6) E -> . ESCREVER E PONTO_VIRGULA
    (7) E -> . ESCREVER E VIRGULA E PONTO_VIRGULA
    (8) E -> . ESCREVER STRING VIRGULA E PONTO_VIRGULA
    (9) E -> . ESCREVER E VIRGULA STRING PONTO_VIRGULA
    (10) E -> . E MAIS E
    (11) E -> . E MULT E
    (12) E -> . E MENOS E
    (13) E -> . MENOS E
    (14) E -> . LPAR E RPAR
    (15) E -> . NUMERO
    (16) E -> . ID
    (17) E -> . E DIVISAO E
    (18) E -> . COMENTARIO_UMA_LINHA
    (19) E -> . COMENTARIO_MULTIPLAS_LINHAS

    ESCREVER        shift and go to state 6
    MENOS           shift and go to state 7
    LPAR            shift and go to state 8
    NUMERO          shift and go to state 9
    ID              shift and go to state 24
    COMENTARIO_UMA_LINHA shift and go to state 10
    COMENTARIO_MULTIPLAS_LINHAS shift and go to state 11

    E                              shift and go to state 28

state 15

    (11) E -> E MULT . E
    (3) E -> . E INCREMENT
    (4) E -> . E MAIS_IGUAL E PONTO_VIRGULA
    (5) E -> . ESCREVER STRING PONTO_VIRGULA
    (6) E -> . ESCREVER E PONTO_VIRGULA
    (7) E -> . ESCREVER E VIRGULA E PONTO_VIRGULA
    (8) E -> . ESCREVER STRING VIRGULA E PONTO_VIRGULA
    (9) E -> . ESCREVER E VIRGULA STRING PONTO_VIRGULA
    (10) E -> . E MAIS E
    (11) E -> . E MULT E
    (12) E -> . E MENOS E
    (13) E -> . MENOS E
    (14) E -> . LPAR E RPAR
    (15) E -> . NUMERO
    (16) E -> . ID
    (17) E -> . E DIVISAO E
    (18) E -> . COMENTARIO_UMA_LINHA
    (19) E -> . COMENTARIO_MULTIPLAS_LINHAS

    ESCREVER        shift and go to state 6
    MENOS           shift and go to state 7
    LPAR            shift and go to state 8
    NUMERO          shift and go to state 9
    ID              shift and go to state 24
    COMENTARIO_UMA_LINHA shift and go to state 10
    COMENTARIO_MULTIPLAS_LINHAS shift and go to state 11

    E                              shift and go to state 29

state 16

    (12) E -> E MENOS . E
    (3) E -> . E INCREMENT
    (4) E -> . E MAIS_IGUAL E PONTO_VIRGULA
    (5) E -> . ESCREVER STRING PONTO_VIRGULA
    (6) E -> . ESCREVER E PONTO_VIRGULA
    (7) E -> . ESCREVER E VIRGULA E PONTO_VIRGULA
    (8) E -> . ESCREVER STRING VIRGULA E PONTO_VIRGULA
    (9) E -> . ESCREVER E VIRGULA STRING PONTO_VIRGULA
    (10) E -> . E MAIS E
    (11) E -> . E MULT E
    (12) E -> . E MENOS E
    (13) E -> . MENOS E
    (14) E -> . LPAR E RPAR
    (15) E -> . NUMERO
    (16) E -> . ID
    (17) E -> . E DIVISAO E
    (18) E -> . COMENTARIO_UMA_LINHA
    (19) E -> . COMENTARIO_MULTIPLAS_LINHAS

    ESCREVER        shift and go to state 6
    MENOS           shift and go to state 7
    LPAR            shift and go to state 8
    NUMERO          shift and go to state 9
    ID              shift and go to state 24
    COMENTARIO_UMA_LINHA shift and go to state 10
    COMENTARIO_MULTIPLAS_LINHAS shift and go to state 11

    E                              shift and go to state 30

state 17

    (17) E -> E DIVISAO . E
    (3) E -> . E INCREMENT
    (4) E -> . E MAIS_IGUAL E PONTO_VIRGULA
    (5) E -> . ESCREVER STRING PONTO_VIRGULA
    (6) E -> . ESCREVER E PONTO_VIRGULA
    (7) E -> . ESCREVER E VIRGULA E PONTO_VIRGULA
    (8) E -> . ESCREVER STRING VIRGULA E PONTO_VIRGULA
    (9) E -> . ESCREVER E VIRGULA STRING PONTO_VIRGULA
    (10) E -> . E MAIS E
    (11) E -> . E MULT E
    (12) E -> . E MENOS E
    (13) E -> . MENOS E
    (14) E -> . LPAR E RPAR
    (15) E -> . NUMERO
    (16) E -> . ID
    (17) E -> . E DIVISAO E
    (18) E -> . COMENTARIO_UMA_LINHA
    (19) E -> . COMENTARIO_MULTIPLAS_LINHAS

    ESCREVER        shift and go to state 6
    MENOS           shift and go to state 7
    LPAR            shift and go to state 8
    NUMERO          shift and go to state 9
    ID              shift and go to state 24
    COMENTARIO_UMA_LINHA shift and go to state 10
    COMENTARIO_MULTIPLAS_LINHAS shift and go to state 11

    E                              shift and go to state 31

state 18

    (21) D -> VAR var_list . PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 32


state 19

    (22) var_list -> var_item .
    (23) var_list -> var_item . VIRGULA var_list

    PONTO_VIRGULA   reduce using rule 22 (var_list -> var_item .)
    VIRGULA         shift and go to state 33


state 20

    (24) var_item -> ID . IGUAL constant

    IGUAL           shift and go to state 34


state 21

    (20) A -> ID IGUAL . E PONTO_VIRGULA
    (3) E -> . E INCREMENT
    (4) E -> . E MAIS_IGUAL E PONTO_VIRGULA
    (5) E -> . ESCREVER STRING PONTO_VIRGULA
    (6) E -> . ESCREVER E PONTO_VIRGULA
    (7) E -> . ESCREVER E VIRGULA E PONTO_VIRGULA
    (8) E -> . ESCREVER STRING VIRGULA E PONTO_VIRGULA
    (9) E -> . ESCREVER E VIRGULA STRING PONTO_VIRGULA
    (10) E -> . E MAIS E
    (11) E -> . E MULT E
    (12) E -> . E MENOS E
    (13) E -> . MENOS E
    (14) E -> . LPAR E RPAR
    (15) E -> . NUMERO
    (16) E -> . ID
    (17) E -> . E DIVISAO E
    (18) E -> . COMENTARIO_UMA_LINHA
    (19) E -> . COMENTARIO_MULTIPLAS_LINHAS

    ESCREVER        shift and go to state 6
    MENOS           shift and go to state 7
    LPAR            shift and go to state 8
    NUMERO          shift and go to state 9
    ID              shift and go to state 24
    COMENTARIO_UMA_LINHA shift and go to state 10
    COMENTARIO_MULTIPLAS_LINHAS shift and go to state 11

    E                              shift and go to state 35

state 22

    (5) E -> ESCREVER STRING . PONTO_VIRGULA
    (8) E -> ESCREVER STRING . VIRGULA E PONTO_VIRGULA

    PONTO_VIRGULA   shift and go to state 36
    VIRGULA         shift and go to state 37


state 23

    (6) E -> ESCREVER E . PONTO_VIRGULA
    (7) E -> ESCREVER E . VIRGULA E PONTO_VIRGULA
    (9) E -> ESCREVER E . VIRGULA STRING PONTO_VIRGULA
    (3) E -> E . INCREMENT
    (4) E -> E . MAIS_IGUAL E PONTO_VIRGULA
    (10) E -> E . MAIS E
    (11) E -> E . MULT E
    (12) E -> E . MENOS E
    (17) E -> E . DIVISAO E

    PONTO_VIRGULA   shift and go to state 38
    VIRGULA         shift and go to state 39
    INCREMENT       shift and go to state 12
    MAIS_IGUAL      shift and go to state 13
    MAIS            shift and go to state 14
    MULT            shift and go to state 15
    MENOS           shift and go to state 16
    DIVISAO         shift and go to state 17


state 24

    (16) E -> ID .

    PONTO_VIRGULA   reduce using rule 16 (E -> ID .)
    VIRGULA         reduce using rule 16 (E -> ID .)
    INCREMENT       reduce using rule 16 (E -> ID .)
    MAIS_IGUAL      reduce using rule 16 (E -> ID .)
    MAIS            reduce using rule 16 (E -> ID .)
    MULT            reduce using rule 16 (E -> ID .)
    MENOS           reduce using rule 16 (E -> ID .)
    DIVISAO         reduce using rule 16 (E -> ID .)
    $end            reduce using rule 16 (E -> ID .)
    RPAR            reduce using rule 16 (E -> ID .)


state 25

    (13) E -> MENOS E .
    (3) E -> E . INCREMENT
    (4) E -> E . MAIS_IGUAL E PONTO_VIRGULA
    (10) E -> E . MAIS E
    (11) E -> E . MULT E
    (12) E -> E . MENOS E
    (17) E -> E . DIVISAO E

    INCREMENT       reduce using rule 13 (E -> MENOS E .)
    MAIS_IGUAL      reduce using rule 13 (E -> MENOS E .)
    MAIS            reduce using rule 13 (E -> MENOS E .)
    MULT            reduce using rule 13 (E -> MENOS E .)
    MENOS           reduce using rule 13 (E -> MENOS E .)
    DIVISAO         reduce using rule 13 (E -> MENOS E .)
    $end            reduce using rule 13 (E -> MENOS E .)
    PONTO_VIRGULA   reduce using rule 13 (E -> MENOS E .)
    VIRGULA         reduce using rule 13 (E -> MENOS E .)
    RPAR            reduce using rule 13 (E -> MENOS E .)

  ! INCREMENT       [ shift and go to state 12 ]
  ! MAIS_IGUAL      [ shift and go to state 13 ]
  ! MAIS            [ shift and go to state 14 ]
  ! MULT            [ shift and go to state 15 ]
  ! MENOS           [ shift and go to state 16 ]
  ! DIVISAO         [ shift and go to state 17 ]


state 26

    (14) E -> LPAR E . RPAR
    (3) E -> E . INCREMENT
    (4) E -> E . MAIS_IGUAL E PONTO_VIRGULA
    (10) E -> E . MAIS E
    (11) E -> E . MULT E
    (12) E -> E . MENOS E
    (17) E -> E . DIVISAO E

    RPAR            shift and go to state 40
    INCREMENT       shift and go to state 12
    MAIS_IGUAL      shift and go to state 13
    MAIS            shift and go to state 14
    MULT            shift and go to state 15
    MENOS           shift and go to state 16
    DIVISAO         shift and go to state 17


state 27

    (4) E -> E MAIS_IGUAL E . PONTO_VIRGULA
    (3) E -> E . INCREMENT
    (4) E -> E . MAIS_IGUAL E PONTO_VIRGULA
    (10) E -> E . MAIS E
    (11) E -> E . MULT E
    (12) E -> E . MENOS E
    (17) E -> E . DIVISAO E

    PONTO_VIRGULA   shift and go to state 41
    INCREMENT       shift and go to state 12
    MAIS_IGUAL      shift and go to state 13
    MAIS            shift and go to state 14
    MULT            shift and go to state 15
    MENOS           shift and go to state 16
    DIVISAO         shift and go to state 17


state 28

    (10) E -> E MAIS E .
    (3) E -> E . INCREMENT
    (4) E -> E . MAIS_IGUAL E PONTO_VIRGULA
    (10) E -> E . MAIS E
    (11) E -> E . MULT E
    (12) E -> E . MENOS E
    (17) E -> E . DIVISAO E

    INCREMENT       reduce using rule 10 (E -> E MAIS E .)
    MAIS_IGUAL      reduce using rule 10 (E -> E MAIS E .)
    MAIS            reduce using rule 10 (E -> E MAIS E .)
    MENOS           reduce using rule 10 (E -> E MAIS E .)
    $end            reduce using rule 10 (E -> E MAIS E .)
    PONTO_VIRGULA   reduce using rule 10 (E -> E MAIS E .)
    VIRGULA         reduce using rule 10 (E -> E MAIS E .)
    RPAR            reduce using rule 10 (E -> E MAIS E .)
    MULT            shift and go to state 15
    DIVISAO         shift and go to state 17

  ! MULT            [ reduce using rule 10 (E -> E MAIS E .) ]
  ! DIVISAO         [ reduce using rule 10 (E -> E MAIS E .) ]
  ! INCREMENT       [ shift and go to state 12 ]
  ! MAIS_IGUAL      [ shift and go to state 13 ]
  ! MAIS            [ shift and go to state 14 ]
  ! MENOS           [ shift and go to state 16 ]


state 29

    (11) E -> E MULT E .
    (3) E -> E . INCREMENT
    (4) E -> E . MAIS_IGUAL E PONTO_VIRGULA
    (10) E -> E . MAIS E
    (11) E -> E . MULT E
    (12) E -> E . MENOS E
    (17) E -> E . DIVISAO E

    INCREMENT       reduce using rule 11 (E -> E MULT E .)
    MAIS_IGUAL      reduce using rule 11 (E -> E MULT E .)
    MAIS            reduce using rule 11 (E -> E MULT E .)
    MULT            reduce using rule 11 (E -> E MULT E .)
    MENOS           reduce using rule 11 (E -> E MULT E .)
    DIVISAO         reduce using rule 11 (E -> E MULT E .)
    $end            reduce using rule 11 (E -> E MULT E .)
    PONTO_VIRGULA   reduce using rule 11 (E -> E MULT E .)
    VIRGULA         reduce using rule 11 (E -> E MULT E .)
    RPAR            reduce using rule 11 (E -> E MULT E .)

  ! INCREMENT       [ shift and go to state 12 ]
  ! MAIS_IGUAL      [ shift and go to state 13 ]
  ! MAIS            [ shift and go to state 14 ]
  ! MULT            [ shift and go to state 15 ]
  ! MENOS           [ shift and go to state 16 ]
  ! DIVISAO         [ shift and go to state 17 ]


state 30

    (12) E -> E MENOS E .
    (3) E -> E . INCREMENT
    (4) E -> E . MAIS_IGUAL E PONTO_VIRGULA
    (10) E -> E . MAIS E
    (11) E -> E . MULT E
    (12) E -> E . MENOS E
    (17) E -> E . DIVISAO E

    INCREMENT       reduce using rule 12 (E -> E MENOS E .)
    MAIS_IGUAL      reduce using rule 12 (E -> E MENOS E .)
    MAIS            reduce using rule 12 (E -> E MENOS E .)
    MENOS           reduce using rule 12 (E -> E MENOS E .)
    $end            reduce using rule 12 (E -> E MENOS E .)
    PONTO_VIRGULA   reduce using rule 12 (E -> E MENOS E .)
    VIRGULA         reduce using rule 12 (E -> E MENOS E .)
    RPAR            reduce using rule 12 (E -> E MENOS E .)
    MULT            shift and go to state 15
    DIVISAO         shift and go to state 17
